--- a/src/styles/_graph.scss
+++ b/src/styles/_graph.scss
@@ -263,14 +263,6 @@ label {
   width: 2000px;
 }
 
-
-#familySelector{
-  // height:380px;
-  // border-bottom: solid lightgray;
-  //border-right: solid lightgray;
-  // padding-top:20px;
-}
-
 #data_selection{
   border-right:#cdcdcd medium solid;
 }
@@ -558,10 +550,6 @@ rect.selected{
     stroke:red;
   }
 }*/
-
-#app{
-  display: inline-flex;
-}
 
 
 .node a{
